objects/Participant_Game_Response__c.object
<CustomObject>
    <description>It is having the Information about participant response.</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact, saving contact id, will show contact name at front-end.</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Game Responses</relationshipLabel>
        <relationshipName>Participant_Game_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_PGR__c</fullName>
        <label>Created Date (PGR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Don_t_Know__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Know</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Input_Time__c</fullName>
        <label>First Input Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to game, saving game id, will show game name at front-end.</description>
        <label>Game Name</label>
        <referenceTo>Game_Detail__c</referenceTo>
        <relationshipLabel>Participant Game Responses</relationshipLabel>
        <relationshipName>Participant_Game_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Responses_Id__c</fullName>
        <label>Generic Responses Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageName__c</fullName>
        <label>ImageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageType__c</fullName>
        <label>ImageType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Practice_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Practice Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeftImageIndex__c</fullName>
        <label>LeftImageIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_of_Answers__c</fullName>
        <label>Order of Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_First_Response__c</fullName>
        <label>Participant First Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Game_InfoID__c</fullName>
        <description>Lookup to Participant Game Info, saving Participant Game InfoID, will show at front-end.</description>
        <label>Participant Game InfoID</label>
        <referenceTo>Participant_Game_Info__c</referenceTo>
        <relationshipLabel>Participant Game Responses</relationshipLabel>
        <relationshipName>Participant_Game_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Participant_Response__c</fullName>
        <label>Participant Response</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reaction_Time__c</fullName>
        <label>Reaction Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Reaction_Time_in_ms__c</fullName>
        <label>Reaction Time in ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Times_Id__c</fullName>
        <label>Response Times Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result_Id__c</fullName>
        <label>Result Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RightImageIndex__c</fullName>
        <label>RightImageIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_Answer__c</fullName>
        <label>Right Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Round</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudyImageCoordinate__c</fullName>
        <label>StudyImageCoordinate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestImageCoordinate__c</fullName>
        <label>TestImageCoordinate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Session_Id__c</fullName>
        <label>Test Session Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_First_Key_Stroke__c</fullName>
        <label>Time To First Key Stroke</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_for_Each_Box__c</fullName>
        <label>Time for Each Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_for_All_Boxes__c</fullName>
        <label>Total Time for All Boxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Participant Game Response</label>
    <nameField>
        <displayFormat>PGR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Game Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>